chore(config): add eslint/test/script setup

--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "license": "MIT",
   "author": "Greg Deane",
   "scripts": {
-    "start": "babel-node tools/src-server.js"
+    "lint": "esw src tools",
+    "lint:watch": "npm run lint -- --watch",
+    "open:src": "babel-node tools/server.js",
+    "prestart": "babel-node tools/message.js",
+    "start": "npm-run-all --parallel open:src lint:watch test:watch",
+    "test": "mocha --reporter progress tools/test.js \"src/**/*.spec.js\"",
+    "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
