feat(structure): formalize structure with router

--- a/package.json
+++ b/package.json
@@ -9,31 +9,34 @@
     "lint:watch": "npm run lint -- --watch",
     "open:src": "babel-node tools/server.js",
     "prestart": "babel-node tools/message.js",
-    "start": "npm-run-all --parallel open:src lint:watch test:watch",
-    "test": "mocha --reporter progress tools/test.js \"src/**/*.spec.js\"",
+    "start": "npm-run-all --parallel test:watch open:src lint:watch",
+    "test": "mocha --reporter progress tools/test.js \"src/**/*.spec.jsx\"",
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
-    "babel-polyfill": "^6.16.0",
     "bootstrap": "4.0.0-alpha.5",
-    "jquery": "^3.1.1",
+    "object-assign": "^4.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "toastr": "^2.1.2"
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-react-display-name": "^2.0.0",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.10",
     "babel-preset-es2015": "^6.16.0",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-1": "^6.16.0",
     "babel-register": "^6.16.3",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
