--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "author": "Greg Deane",
   "scripts": {
+    "json": "babel-node tools/json.server.js",
     "lint": "esw src tools",
     "lint:watch": "npm run lint -- --watch",
     "open:src": "babel-node tools/server.js",
@@ -14,6 +15,7 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
+    "axios": "^0.15.2",
     "bootstrap": "4.0.0-alpha.5",
     "object-assign": "^4.1.0",
     "react": "^15.3.2",
@@ -53,6 +55,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "jsdom": "^9.8.0",
+    "json-server": "^0.8.22",
     "mocha": "^3.1.2",
     "nock": "^8.1.0",
     "npm-run-all": "^3.1.1",
